--- a/WPF GET STARTED/MainWindow.xaml
+++ b/WPF GET STARTED/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_GET_STARTED"
         mc:Ignorable="d"
-        Title="Buttons are reacting to clicks" Height="480" Width="720">
+        Title="Cube" Height="480" Width="720">
 
     <Border Padding="10" Background="DimGray">
 
@@ -21,15 +21,18 @@
                 <RowDefinition Height="1*"/>
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
-            <Button Grid.Column="0" x:Name="btn11" Content="11" />
-            <Button Grid.Column="1" x:Name="btn12" Content="12"/>
-            <Button Grid.Column="2" x:Name="btn13" Content="13"/>
-            <Button Grid.Column="0" Grid.Row="1" x:Name="btn21" Content="21"/>
-            <Button Grid.Column="1" Grid.Row="1" x:Name="btn22" Content="22"/>
-            <Button Grid.Column="2" Grid.Row="1" x:Name="btn23" Content="23"/>
-            <Button Grid.Column="0" Grid.Row="2" x:Name="btn31" Content="31"/>
-            <Button Grid.Column="1" Grid.Row="2" x:Name="btn32" Content="32"/>
-            <Button Grid.Column="2" Grid.Row="2" x:Name="btn33" Content="33"/>
+            <Button Grid.Column="0" x:Name="btn11" Content="11" Visibility="Hidden" Margin="5"/>
+            <Button Grid.Column="1" x:Name="btn12" Content="12" Visibility="Hidden" Margin="5"/>
+            <Button Grid.Column="2" x:Name="btn13" Content="13" Visibility="Hidden" Margin="5"/>
+            <Button Grid.Column="0" Grid.Row="1" x:Name="btn21" Content="21" Visibility="Hidden" Margin="5"/>
+            <Button Grid.Column="1" Grid.Row="1" x:Name="btn22" Content="22" Visibility="Hidden" Margin="5"/>
+            <Button Grid.Column="2" Grid.Row="1" x:Name="btn23" Content="23" Visibility="Hidden" Margin="5"/>
+            <Button Grid.Column="0" Grid.Row="2" x:Name="btn31" Content="31" Visibility="Hidden" Margin="5"/>
+            <Button Grid.Column="1" Grid.Row="2" x:Name="btn32" Content="32" Visibility="Hidden" Margin="5"/>
+            <Button Grid.Column="2" Grid.Row="2" x:Name="btn33" Content="33" Visibility="Hidden" Margin="5"/>
+
+            <Button Grid.Column="3" Grid.Row="1" x:Name="bnt24" Content="START" Click="bnt24_Click"/>
+            <TextBlock Grid.Column="4" x:Name="txb14" Text="0"/>
         </Grid>
 
     </Border>
